Use sbt-dynver instead of sbt-git